# django-project0

./: .gitignore  README.md  package-lock.json  pyproject.toml  requirements.txt
core/: settings.py  urls.py
courses/: admin.py  models.py  urls.py  views.py
courses/migrations/: 0001_initial.py  0002_comments.py
courses/templates/: classes.html  course.html  home.html
templates/: base.html
users/: admin.py  models.py  urls.py  views.py
users/migrations/: 0001_initial.py
users/templates/: login.html  signup.html
