[project]
name = "project0"
version = "0.1.0"
description = ""
authors = [
    {name = "mafe",email = "mfernandarocosta@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "django (>=5.2.9,<6.0.0)",
    "pillow (>=12.0.0,<13.0.0)",
    "mysqlclient (>=2.2.7,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.requires-plugins]
poetry-plugin-export = ">=1.8"